Bot_V2/src/objects/Bot_Notification__e.object
<CustomObject>
    <fields>
        <fullName>Known_Issue_Id__c</fullName>
        <label>Known_Issue_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Issue_Name__c</fullName>
        <label>Known_Issue_Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Issue_Subscriber__c</fullName>
        <label>Known_Issue_Subscriber</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Issue_Summary__c</fullName>
        <label>Known_Issue_Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bot Notification</label>
    <pluralLabel>Bot Notifications</pluralLabel>
</CustomObject>